# ocean_weather

./: .clang-format  .gitignore  .gitmodules  CMakeGraphVizOptions.cmake  CMakeLists.txt  LICENSE  README.md
cmake/: cimg.cmake  fftw3.cmake  freeimage.cmake  glad.cmake  glfw.cmake  glm.cmake  imgui.cmake  libjpeg.cmake  opengl.cmake
include/: camera.h  fileutils.h  image.h  mesh.h  shader.h  skybox.h  window.h
shaders/skybox/: skybox.frag  skybox.vert
src/: CMakeLists.txt  camera.cpp  fileutils.cpp  image.cpp  main.cpp  mesh.cpp  shader.cpp  skybox.cpp  window.cpp
